--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=mr-smoothy
+
+# Web Configuration
+spring.mvc.servlet.path=/
+
+# MinIO Configuration
+minio.endpoint=${MINIO_ENDPOINT:http://localhost:9000}
+minio.accessKey=${MINIO_ACCESS_KEY:minioadmin}
+minio.secretKey=${MINIO_SECRET_KEY:minioadmin123}
+minio.bucketName=${MINIO_BUCKET_NAME:mr-smoothy-images}
+
+# File Upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
