update docker compose

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SERVER_PORT=8080
 SPRING_PROFILES_ACTIVE=dev
 
 # Database Configuration
-SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3306/mr_smoothy?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/mr_smoothy?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 SPRING_DATASOURCE_USERNAME=smoothy
 SPRING_DATASOURCE_PASSWORD=smoothypass
 
@@ -18,9 +18,15 @@ JWT_EXPIRATION=86400000
 
 # MinIO Configuration
 # Internal endpoint for backend to connect to MinIO (ใช้ใน Docker: minio:9000, ใน local: localhost:9000)
-MINIO_ENDPOINT=http://localhost:9000
-# Public endpoint for frontend to access images (ต้องเข้าถึงได้จาก browser: localhost:9000)
-MINIO_PUBLIC_ENDPOINT=http://localhost:9000
+MINIO_ENDPOINT=http://minio:9000
+# Public endpoint for frontend to access images (ต้องเข้าถึงได้จาก browser - ใช้ IP ของ server)
+MINIO_PUBLIC_ENDPOINT=http://172.31.28.38:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=mr-smoothy-images
+
+# CORS Configuration
+# กำหนด allowed origins สำหรับ CORS (คั่นด้วย comma)
+# ตัวอย่าง: CORS_ALLOWED_ORIGINS=http://localhost:3000,http://172.31.28.38:3000,http://yourdomain.com
+# ถ้าไม่กำหนดจะใช้ค่า default (localhost และ private IP ranges)
+# CORS_ALLOWED_ORIGINS=http://localhost:3000,http://172.31.28.38:3000
