--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,11 +15,14 @@ services:
     command: ["mysqld", "--bind-address=0.0.0.0", "--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
     volumes:
       - db_data:/var/lib/mysql
+    networks:
+      - default
     healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -uroot -prootpass || exit 1"]
-      interval: 10s
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -uroot -prootpass || exit 1"]
+      interval: 3s
       timeout: 5s
-      retries: 10
+      retries: 30
+      start_period: 40s
 
   phpmyadmin:
     image: phpmyadmin:5
@@ -61,36 +64,44 @@ services:
     container_name: mr_smoothy_api
     restart: unless-stopped
     ports:
-      - "${SERVER_PORT:-8080}:8080"
-    env_file:
-      - .env
+      - "8080:8080"
     environment:
-      # Database - ใช้ค่าจาก .env หรือค่า default
-      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL:-jdbc:mysql://db:3306/mr_smoothy?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
-      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME:-smoothy}
-      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD:-smoothypass}
+      # Database - ใส่ค่าตรงๆ
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/mr_smoothy?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&connectTimeout=60000&socketTimeout=60000&autoReconnect=true
+      SPRING_DATASOURCE_USERNAME: smoothy
+      SPRING_DATASOURCE_PASSWORD: smoothypass
       # JPA
-      SPRING_JPA_HIBERNATE_DDL_AUTO: ${SPRING_JPA_HIBERNATE_DDL_AUTO:-validate}
-      SPRING_JPA_SHOW_SQL: ${SPRING_JPA_SHOW_SQL:-true}
-      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: ${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:-org.hibernate.dialect.MySQLDialect}
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_SHOW_SQL: true
+      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQLDialect
       # Server
       SERVER_PORT: 8080
-      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-dev}
+      SPRING_PROFILES_ACTIVE: dev
       # JWT
-      JWT_SECRET: ${JWT_SECRET:-9e62b0c8a4f1d2e3b5c6a7981f2d3c4b5a6e7f8190abcdeffedcba0987654321}
-      JWT_EXPIRATION: ${JWT_EXPIRATION:-86400000}
+      JWT_SECRET: 9e62b0c8a4f1d2e3b5c6a7981f2d3c4b5a6e7f8190abcdeffedcba0987654321
+      JWT_EXPIRATION: 86400000
       # MinIO - Internal endpoint สำหรับ backend เชื่อมต่อ MinIO (ใน Docker ใช้ minio:9000)
-      MINIO_ENDPOINT: ${MINIO_ENDPOINT:-http://minio:9000}
-      # MinIO - Public endpoint สำหรับ frontend เข้าถึงรูปภาพ (ต้องเข้าถึงได้จาก browser)
-      MINIO_PUBLIC_ENDPOINT: ${MINIO_PUBLIC_ENDPOINT:-http://localhost:9000}
-      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY:-minioadmin}
-      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY:-minioadmin123}
-      MINIO_BUCKET_NAME: ${MINIO_BUCKET_NAME:-mr-smoothy-images}
+      MINIO_ENDPOINT: http://minio:9000
+      # MinIO - Public endpoint สำหรับ frontend เข้าถึงรูปภาพ
+      # Localhost (สำหรับ development)
+      MINIO_PUBLIC_ENDPOINT: http://localhost:9000
+      # Server (สำหรับ production - uncomment เมื่อ deploy บน server)
+      # MINIO_PUBLIC_ENDPOINT: http://3.91.29.241:9000
+      # CORS - Allowed origins (คั่นด้วย comma)
+      # Localhost (สำหรับ development)
+      CORS_ALLOWED_ORIGINS: http://localhost:3000
+      # Server (สำหรับ production - uncomment เมื่อ deploy บน server)
+      # CORS_ALLOWED_ORIGINS: http://3.91.29.241:3000,http://localhost:3000
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin123
+      MINIO_BUCKET_NAME: mr-smoothy-images
     depends_on:
       db:
         condition: service_healthy
       minio:
         condition: service_started
+    networks:
+      - default
 
 volumes:
   db_data:
