--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.application.name=mr-smoothy
 # Web Configuration
 spring.mvc.servlet.path=/
 
+# Server Configuration - Bind to all interfaces (0.0.0.0) to allow external access
+server.address=0.0.0.0
+server.port=${SERVER_PORT:8080}
+
 # MinIO Configuration
 # Internal endpoint for backend to connect to MinIO (used in Docker: minio:9000)
 minio.endpoint=${MINIO_ENDPOINT:http://localhost:9000}
@@ -15,3 +19,17 @@ minio.bucketName=${MINIO_BUCKET_NAME:mr-smoothy-images}
 # File Upload
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# Database Connection Configuration
+# Increase connection timeout and retry attempts
+spring.datasource.hikari.connection-timeout=120000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.leak-detection-threshold=60000
+# Retry connection on failure - wait longer before failing
+spring.datasource.hikari.initialization-fail-timeout=120000
+# Connection validation
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.validation-timeout=5000
