--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,7 @@ spring.datasource.hikari.initialization-fail-timeout=120000
 # Connection validation
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.validation-timeout=5000
+# Disable read-only mode for connections (fix read-only connection error)
+spring.datasource.hikari.read-only=false
+# Transaction management
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=false
