--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -89,9 +89,9 @@ services:
       # MINIO_PUBLIC_ENDPOINT: http://3.91.29.241:9000
       # CORS - Allowed origins (คั่นด้วย comma)
       # Localhost (สำหรับ development)
-      CORS_ALLOWED_ORIGINS: http://localhost:3000
+      # CORS_ALLOWED_ORIGINS: http://localhost:3000
       # Server (สำหรับ production - uncomment เมื่อ deploy บน server)
-      # CORS_ALLOWED_ORIGINS: http://3.91.29.241:3000,http://localhost:3000
+      CORS_ALLOWED_ORIGINS: http://3.91.29.241:3000,http://localhost:3000
       MINIO_ACCESS_KEY: minioadmin
       MINIO_SECRET_KEY: minioadmin123
       MINIO_BUCKET_NAME: mr-smoothy-images
