update AI - remove API keys from codebase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,16 @@ spring.datasource.hikari.validation-timeout=5000
 spring.datasource.hikari.read-only=false
 # Transaction management
 spring.jpa.properties.hibernate.connection.provider_disables_autocommit=false
+
+# Jackson Configuration for Java 8 Date/Time
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.deserialization.fail-on-unknown-properties=false
+
+# USDA FoodData Central API Configuration
+usda.api.key=${USDA_API_KEY:your_usda_api_key_here}
+usda.api.base-url=https://api.nal.usda.gov/fdc/v1
+
+# OpenAI API Configuration
+openai.api.key=${OPENAI_API_KEY:your_openai_api_key_here}
+openai.api.model=${OPENAI_MODEL:gpt-4-turbo-preview}
+openai.api.base-url=https://api.openai.com/v1
