--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -86,15 +86,24 @@ services:
       # Localhost (สำหรับ development)
       MINIO_PUBLIC_ENDPOINT: http://localhost:9000
       # Server (สำหรับ production - uncomment เมื่อ deploy บน server)
-      # MINIO_PUBLIC_ENDPOINT: http://3.91.29.241:9000
+      # MINIO_PUBLIC_ENDPOINT: http://localhost:9000
       # CORS - Allowed origins (คั่นด้วย comma)
       # Localhost (สำหรับ development)
       # CORS_ALLOWED_ORIGINS: http://localhost:3000
       # Server (สำหรับ production - uncomment เมื่อ deploy บน server)
-      CORS_ALLOWED_ORIGINS: http://3.91.29.241:3000,http://localhost:3000
+      CORS_ALLOWED_ORIGINS: http://localhost:3000
       MINIO_ACCESS_KEY: minioadmin
       MINIO_SECRET_KEY: minioadmin123
       MINIO_BUCKET_NAME: mr-smoothy-images
+      # USDA FoodData Central API
+      # IMPORTANT: Set your actual API keys via environment variables or .env file
+      # Do NOT commit real API keys to git!
+      # Example: export USDA_API_KEY=your_key_here before running docker-compose
+      USDA_API_KEY: ${USDA_API_KEY:your_usda_api_key_here}
+      # OpenAI API
+      # Example: export OPENAI_API_KEY=your_key_here before running docker-compose
+      OPENAI_API_KEY: ${OPENAI_API_KEY:your_openai_api_key_here}
+      OPENAI_MODEL: ${OPENAI_MODEL:gpt-4-turbo-preview}
     depends_on:
       db:
         condition: service_healthy
