--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,5 +48,5 @@ usda.api.base-url=https://api.nal.usda.gov/fdc/v1
 
 # OpenAI API Configuration
 openai.api.key=${OPENAI_API_KEY:your_openai_api_key_here}
-openai.api.model=${OPENAI_MODEL:gpt-4-turbo-preview}
+openai.api.model=${OPENAI_MODEL:gpt-4o-mini}
 openai.api.base-url=https://api.openai.com/v1
