--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,7 @@ usda.api.base-url=https://api.nal.usda.gov/fdc/v1
 openai.api.key=${OPENAI_API_KEY:your_openai_api_key_here}
 openai.api.model=${OPENAI_MODEL:gpt-4o-mini}
 openai.api.base-url=https://api.openai.com/v1
+
+# CORS Configuration
+# Allowed origins (comma-separated). Can be overridden by CORS_ALLOWED_ORIGINS environment variable
+CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:http://localhost:3000,https://mr-smoothy.thetigerteamacademy.net}
