--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ JWT_EXPIRATION=86400000
 # Internal endpoint for backend to connect to MinIO (ใช้ใน Docker: minio:9000, ใน local: localhost:9000)
 MINIO_ENDPOINT=http://minio:9000
 # Public endpoint for frontend to access images (ต้องเข้าถึงได้จาก browser - ใช้ IP ของ server)
-MINIO_PUBLIC_ENDPOINT=http://172.31.28.38:9000
+MINIO_PUBLIC_ENDPOINT=http://localhost:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=mr-smoothy-images
