--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -89,7 +89,7 @@ services:
       MINIO_BUCKET_NAME: mr-smoothy-images
 
       # --- Other APIs ---
-      CORS_ALLOWED_ORIGINS: http://localhost:3000
+      CORS_ALLOWED_ORIGINS: http://localhost:3000,https://mr-smoothy.thanonchai.site
       USDA_API_KEY: ${USDA_API_KEY:-your_usda_api_key_here}
       OPENAI_API_KEY: ${OPENAI_API_KEY:-your_openai_api_key_here}
       OPENAI_MODEL: ${OPENAI_MODEL:-gpt-4o-mini}
