--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,7 +52,7 @@ services:
   #   volumes:
   #     - minio_data:/data
   #   healthcheck:
-  #     test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+  #     test: ["CMD", "curl", "-f", "http://minio.thanonchai.site/minio/health/live"]
   #     interval: 30s
   #     timeout: 20s
   #     retries: 3
@@ -92,7 +92,7 @@ services:
       CORS_ALLOWED_ORIGINS: http://localhost:3000,https://mr-smoothy.thanonchai.site
       USDA_API_KEY: ${USDA_API_KEY:-your_usda_api_key_here}
       OPENAI_API_KEY: ${OPENAI_API_KEY:-your_openai_api_key_here}
-      OPENAI_MODEL: ${OPENAI_MODEL:-gpt-4o-mini}
+      OPENAI_MODEL: ${OPENAI_MODEL:-gpt-4-turbo-preview}
 
     networks:
       - gateway-network
