--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ server.port=${SERVER_PORT:8080}
 
 # MinIO Configuration
 # Internal endpoint for backend to connect to MinIO (used in Docker: minio:9000)
-minio.endpoint=${MINIO_ENDPOINT:http://localhost:9000}
-# Public endpoint for frontend to access images (must be accessible from browser: localhost:9000)
-minio.publicEndpoint=${MINIO_PUBLIC_ENDPOINT:http://localhost:9000}
+minio.endpoint=${MINIO_ENDPOINT:http://minio.thanonchai.site}
+# Public endpoint for frontend to access images (must be accessible from browser: minio.thanonchai.site)
+minio.publicEndpoint=${MINIO_PUBLIC_ENDPOINT:http://minio.thanonchai.site}
 minio.accessKey=${MINIO_ACCESS_KEY:minioadmin}
 minio.secretKey=${MINIO_SECRET_KEY:minioadmin123}
 minio.bucketName=${MINIO_BUCKET_NAME:mr-smoothy-images}
